# Multi-paradigmatic-Snakes-and-Ladders

C/: CMakeLists.txt  game.c
C++/: CMakeLists.txt  main.cpp
C++/header/: ComputerPlayer.h  Die.h  Game.h  GameBoard.h  HumanPlayer.h  Player.h
C++/source/: ComputerPlayer.cc  Die.cc  Game.cc  GameBoard.cc  HumanPlayer.cc  Player.cc
GoLang/: main.go
haskell/: .gitignore  gamev2.hs
python/: .gitignore
scala/: .gitignore
scala/src/main/scala/: BoardFeature.scala  ComputerPlayer.scala  Die.scala  Game.scala  GameBoard.scala  HumanPlayer.scala  Player.scala  main.scala
